--- a/style.css
+++ b/style.css
@@ -57,11 +57,11 @@ body{
     text-decoration:none;
     text-shadow:0px 1px 0px #263666;
     }
-.buttons,.buttonses:hover{
+.buttons:hover{
     background:linear-gradient(to bottom, #0688fa 5%, #2dabf9 100%);
     background-color:#0688fa;
     }
-.buttons,.buttonses:active{
+.buttons:active{
     position:relative;
     top:2px;
     }
@@ -77,7 +77,7 @@ body{
     justify-content: space-between;
     font-family: Quicksand;
     }
-.home{
+.home,.about,.facilities,.admission{
     color: rgb(88, 91, 91);
     }
 .home:hover{
@@ -86,14 +86,23 @@ body{
     position:relative;
     top: 2px;
     }
-.about{
-    color: rgb(1, 172, 253);
+.about:hover{
+    color: rgb(254, 163, 1);
+    background-color: rgb(250, 247, 247);
+    position:relative;
+    top: 2px;
     }
-.facilities{
+.facilities:hover{
     color: rgb(5, 212, 223);
+    background-color: rgb(250, 247, 247);
+    position:relative;
+    top: 2px;
     }
-.admission{
+.admission:hover{
     color: rgb(93, 88, 239);
+    background-color: rgb(250, 247, 247);
+    position:relative;
+    top: 2px;
     }
      
     /* main section */
@@ -156,6 +165,14 @@ body{
     text-decoration:none;
     text-shadow:0px 1px 0px #263666;
     margin-bottom: 20px;
+    }
+.header-one-child-buttons:hover{
+    background:linear-gradient(to bottom, #0688fa 5%, #2dabf9 100%);
+    background-color:#0688fa;
+}
+.header-one-child-buttons:active{
+    position:relative;
+    top:2px;
     }
 .header-one-child-img{
     position: static;
@@ -494,6 +511,14 @@ body{
     padding:9px 23px;
     text-decoration:none;
     text-shadow:0px 1px 0px #263666;
+    }
+.buttonses:hover{
+    background:linear-gradient(to bottom, #0688fa 5%, #2dabf9 100%);
+    background-color:#0688fa;
+    }
+.buttonses:active{
+    position:relative;
+    top:2px;
     }
 .main-foot{
     background-color: rgb(1, 172, 253);
