--- a/style.css
+++ b/style.css
@@ -132,9 +132,15 @@ body{
     margin-bottom: auto;
     justify-content: center;
     }
+.empowering{
+    color: rgb(254, 163, 1);
+    }
+.towards{
+    color: rgb(1, 172, 253);
+    }
 .header-one-child-h{
     font-family: Quicksand;
-    font-size: 56px;
+    font-size: 40px;
     font-weight: 700;
     line-height: 61px;
     letter-spacing: 0%;
@@ -342,6 +348,7 @@ body{
     width: 90%;
     display: flex;
     margin-left: auto;
+    margin-right: auto;
     justify-content: center;
     padding-left: 0px;
     padding-right: 0;
@@ -536,6 +543,9 @@ body{
     background-color: rgb(1, 172, 253);
     width: 100%;
     height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
     padding-top: 50px;
     }
 .footer-sec-main-head{
@@ -629,7 +639,16 @@ body{
     background: none;
     background-color: rgb(1, 172, 253);
 }
-@media screen and (max-width: 576px) {
-    .main-header,.header-middle,.header-logo,.header-one,.header-two-card,.angle,.last-section,.last-section-parents,.last-section-two,.last-section-three,.main-foot,.about-school,.keep-divs,.footer-sec-main-head{
+/* media query for smart phone screen size */
+@media screen and (max-width: 768px) {
+    .main-header{
+        justify-content: space-between;
+        }
+    .header-middle{
+        position: relative;
+        margin-left: auto;
+        margin-right: auto;
+        justify-content: center;
         flex-direction: column;
-    }}
+        }
+    }
