--- a/style.css
+++ b/style.css
@@ -19,9 +19,8 @@ body{
     }
 .main-header-first-child{
     width: 90%;
-    margin-left: auto;
-    margin-right: auto;
     justify-content: center;
+    align-items: center;
     }
 .header-logo{
     height: 100%;
@@ -68,14 +67,15 @@ body{
 .header-middle{
     position: relative;
     margin-top: -4.99%;
-    width: 30%;
+    width: 40%;
     display: flex;
     font-size: 20px auto;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 22vw;
+    margin-right: 22vw;
     justify-content: center;
-    justify-content: space-between;
+    justify-content: space-around;
     font-family: Quicksand;
+    background-color: #0688fa;
     }
 .home,.about,.facilities,.admission{
     color: rgb(88, 91, 91);
@@ -645,10 +645,21 @@ body{
         justify-content: space-between;
         }
     .header-middle{
+        width: 100px;
         position: relative;
         margin-left: auto;
         margin-right: auto;
         justify-content: center;
         flex-direction: column;
+        }
+    .img{
+        margin-left: 20px;
+        }
+    .home,.about,.facilities,.admission{
+        margin-left: auto;
+        margin-right: auto;
+        justify-content: center;
+        align-items: center;
+        width: 90px;
         }
     }
